<resources>
    <string name="app_name">Pineapplo Timer</string>
    <string name="colon" translatable="false">:</string>
    <string name="minuteWorkDefault" translatable="false">25</string>
    <string name="secondWorkDefault" translatable="false">00</string>
    <string name="minuteBreakDefault" translatable="false">3</string>
    <string name="secondBreakDefault" translatable="false">30</string>
    <string name="settingsWorkDuration">Work duration</string>
    <string name="settingsBreakDuration">Break duration</string>
    <string name="settingsWorkMusic">Work music</string>
    <string name="upload">Upload</string>
    <string name="unknown_error">Unknown error</string>

    <string-array name="timerWorkDurationArray" >
        <item >1 minutes</item>
        <item >5 minutes</item>
        <item >10 minutes</item>
        <item >25 minutes</item>
        <item >45 minutes</item>
        <item >60 minutes</item>
    </string-array>
    <string-array name="timerBreakDurationArray" >
        <item >3 minutes</item>
        <item >4 minutes</item>
        <item >5 minutes</item>
        <item >7 minutes</item>
        <item >10 minutes</item>
        <item >15 minutes</item>
    </string-array>
</resources>